Add the XWiki iframe for exports

--- a/edit.html
+++ b/edit.html
@@ -2893,6 +2893,7 @@
 	</ol>
 
 	<iframe id="hiddenIframeForAjaxDownloads" style="border:0" iframeborder="0" frameborder="0" iframeelement.frameborder="0;"></iframe>
+	<iframe id="hiddenIframeForXWikiUploads" style="border:0" iframeborder="0" frameborder="0" iframeelement.frameborder="0;"></iframe>
 
 	<!-- Loading fancybox -->
 	<div id='loading_fancy_wrapper' style='display:none'>
